[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"
test = false

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"
test = false