[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.9"
heapless = "0.8.0"
lexical-core = "0.8.5"
ndarray = "0.15.6"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = true
